# hpp-ik

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hpp/ik/: config.hh  definitions.hh  hidden.hh  ik-constraint.hh
python/: CMakeLists.txt  hpp-ik-python.cc
python/test/: hyq_ref_pose.py  test.py  test_corba.py
src/: CMakeLists.txt  ik-constraint.cc
tests/: CMakeLists.txt  test-hpp-ik.cc  test-tools.hh
